[package]
name = "replacer"
version = "0.1.0"
authors = ["Thomas Heartman <thomas.heartman+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
handlebars = "3.4.0"
log = "0.4.11"
serde_yaml = "0.8.13"
structopt = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.34"
